--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "firebase": "^11.9.1",
     "font-awesome": "^4.7.0",
     "genkit": "^1.13.0",
+    "keen-slider": "^6.8.6",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
